--- a/styles.css
+++ b/styles.css
@@ -18,19 +18,48 @@ body {
 .wrapper {
   width: 1000px;
   margin: 0 auto;
-  display: table-cell;
-  vertical-align: middle;
-  text-align: center;
-}
-.page {
-  display: none;
-  position: relative;
-}
-.page1 h1 {
-  font-size: 100px;
-  margin-bottom: 0;
 }
 a {
   color: #ccc;
   font-weight: bold;
+}
+.content-wrapper {
+  padding-left: 200px;
+  letter-spacing: -0.31em;
+  word-spacing: -0.43em;
+}
+.content-wrapper .navigation {
+  width: 200px;
+  margin-left: -200px;
+  letter-spacing: normal;
+  word-spacing: normal;
+  display: inline-block;
+  vertical-align: top;
+}
+.content-wrapper .navigation ul,
+.content-wrapper .navigation li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.content-wrapper .navigation ul a,
+.content-wrapper .navigation li a {
+  display: block;
+  background-color: #333;
+  margin-bottom: 10px;
+  text-decoration: none;
+  padding: 5px;
+}
+.content-wrapper .navigation ul a:hover,
+.content-wrapper .navigation li a:hover,
+.content-wrapper .navigation ul a .active,
+.content-wrapper .navigation li a .active {
+  background-color: #444;
+}
+.content-wrapper .content {
+  letter-spacing: normal;
+  word-spacing: normal;
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 20px;
 }
